--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,9 @@
 name = "zoxofi"
 version = "0.1.0"
 edition = "2021"
+authors = ["Amir Alesheikh <amirhossein.alesheikh@gmail.com>"]
+license = "GPL-3"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.65"
